# swpp-2025-project-team-11

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  README.md
.github/: pull_request_template.md
.github/workflows/: deploy-dev.yml  lint-kotlin.yml  lint-python.yml
backend/: .env_example  Dockerfile  docker-compose.yml  docker-compose_dev.yml  manage.py  pyproject.toml
backend/apps/: urls.py
backend/apps/ai/: constants.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/apps/ai/migrations/: 0001_initial.py  0002_remove_contactanalysisresult_figurative_usage_and_more.py
backend/apps/ai/services/: analysis.py  attachment_analysis.py  chains.py  graph.py  langchain.py  mail_generation.py  mail_suggestion.py  models.py  pii_masker.py  prompt_preview.py  prompts.py  reply.py  utils.py
backend/apps/contact/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/contact/migrations/: 0001_initial.py  0002_alter_promptoption_key.py  0003_group_options_delete_groupoptionmap.py  0004_rename_relationship_role_contactcontext_recipient_role_and_more.py  0005_alter_contact_group_alter_contact_user_and_more.py  0006_group_background_color_group_emoji.py
backend/apps/contacts/: models.py  serializers.py  urls.py  views.py
backend/apps/core/: mixins.py  models.py  renderers.py
backend/apps/core/utils/: async_stream.py  docs.py
backend/apps/mail/: ARCHITECTURE.md  README.md  admin.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
backend/apps/mail/migrations/: 0001_initial.py  0002_email_is_unread.py  0003_sentmail_delete_email_and_more.py  0004_attachmentanalysis.py
backend/apps/my_auth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/user/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_remove_user_refresh_token_googleaccount.py  0002_userprofile.py  0003_alter_googleaccount_access_token_and_more.py  0003_userprofile_language_preference.py
backend/config/: asgi.py  celery.py  enums.py  jwt_middleware.py  settings.py  urls.py  utils.py  wsgi.py
backend/config/settings/: base.py  development.py  local.py  production.py
backend/nginx/: default.conf  default.dev.conf
backend/scripts/dev/: docker-compose.sh
frontend/: .gitignore  CLAUDE.md  build.gradle.kts  settings.gradle.kts  watch_streaming.sh
frontend/app/: .editorconfig  build.gradle.kts  google-services.json
frontend/app/schemas/com.fiveis.xend.data.database.AppDatabase/: 1.json  2.json  3.json
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/res/anim/: slide_in_left.xml  (+3 more)
frontend/gradle/: libs.versions.toml
frontend/gradle/wrapper/: gradle-wrapper.properties
gpu-server/: .env  requirements.txt
gpu-server/app/: llm.py  main.py  models.py
(+333 files in other folders)
