[tool.poetry]
name = "xend"
version = "0.1.0"
description = "AI-powered e-mail generation service"
authors = ["김소원 <kwish@snu.ac.kr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
psycopg = {extras = ["binary"], version = "^3.2.10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
