[tool.poetry]
name = "xend"
version = "0.1.0"
description = "AI-powered e-mail generation service"
authors = ["김소원 <kwish@snu.ac.kr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.6"
psycopg = {extras = ["binary"], version = "^3.2.10"}
uvicorn = {extras = ["standard"], version = "^0.37.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
ruff = "^0.6.9"
black = "^24.8.0"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import order
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = ["E203"] # Black과 충돌 방지

[tool.ruff.per-file-ignores]
"*/migrations/*.py" = ["E501","B","I"]
